# pyconvertu

./:  .gitignore  .gitignore  LICENSE.txt  MANIFEST.in  README  README.md  pyproject.toml  setup.py
convertu/: __init__.py  __main__.py  convertu.py
pyconvertu/: __init__.py  classification.json  pyconvertu.py
